<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="accept">Accept</string>
    <string name="account_is_paused">Your account is currently paused. To message your matches, reactivate your account.</string>
    <string name="account_paused">Account Paused</string>
    <string name="accountkit_error_message_template">%s (%s)</string>
    <string name="action_retry">RETRY</string>
    <string name="ad_logo">Ad</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_company">Add Company</string>
    <string name="add_email_rational_explanation">This will be used to help you recover your account in case you forget your password.</string>
    <string name="add_email_to_secure_account">Please add an email to secure your account</string>
    <string name="add_job_title">Add Job Title</string>
    <string name="add_media">Add Media</string>
    <string name="add_password_to_secure_account">Please add a password to secure your account</string>
    <string name="add_school">Add School</string>
    <string name="added_by_friend_modal_button_text">See Who’s Going Out</string>
    <string name="added_by_friend_to_group_modal_title">%1$s added you to a group on Tinder Social</string>
    <string name="added_by_friends_friend_text_1_friend">%s.</string>
    <string name="added_by_friends_friend_text_2_friend">%1$s &amp; %2$s.</string>
    <string name="added_by_friends_friend_text_3_friend">%1$s, %2$s, &amp; %3$s.</string>
    <string name="age_in_settings_detail">Tinder uses these preferences to suggest matches. Some match suggestions may not fall within your desired parameters.</string>
    <string name="all_media">All</string>
    <string name="allow_group_add">Swipe with Friends</string>
    <string name="allow_later_button">Later</string>
    <string name="allow_location_button">Allow Location</string>
    <string name="allow_notification_button">Allow Notifications</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_matched">Already matched</string>
    <string name="alt_auth_disclaimer_content">We’re constantly improving the app to make it better for everyone. Your feedback is important and will be taken into consideration for future app updates.\nWe’re working on other ways to sign up for Tinder.\nStay tuned.</string>
    <string name="alt_auth_disclaimer_title">Thanks for the feedback</string>
    <string name="and_all_the_features_of_tinder_plus">and all the features of Tinder+</string>
    <string name="apologies">Apologies!</string>
    <string name="app_id">464891386855067</string>
    <string name="app_name">Web Profile</string>
    <string name="app_settings">App Settings</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_username_delete">Are you sure you want to delete your username?</string>
    <string name="ask_delete_account">Delete Account?</string>
    <string name="ask_logout">Logout?</string>
    <string name="ask_me">Ask Me</string>
    <string name="auth_fb_disclaimer_text">We don’t post anything to Facebook.</string>
    <string name="auth_fb_disclaimer_title">We take your privacy seriously</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="autoplay_video">Autoplay Videos</string>
    <string name="autoplay_video_message">Playing videos use more data than displaying photos, so choose when videos autoplay here.</string>
    <string name="autoplay_video_never">Never Autoplay Videos</string>
    <string name="autoplay_video_wifi_mobile_data">On Wifi and Mobile Data</string>
    <string name="autoplay_video_wifi_only">On Wifi Only</string>
    <string name="badges_verified">Verified</string>
    <string name="best_photo">Best Photo</string>
    <string name="best_value">Best Value</string>
    <string name="birthdate">Birthdate</string>
    <string name="bitmoji_add_button_text">Add Bitmoji</string>
    <string name="bitmoji_auth_title">Snapchat</string>
    <string name="bitmoji_chat_input_icon">Bitmoji chat input icon</string>
    <string name="bitmoji_connect">Connect Bitmoji</string>
    <string name="bitmoji_disconnect_dialog_content">Your Bitmoji keyboard will no longer be available in chat.</string>
    <string name="bitmoji_disconnect_dialog_title">Disconnect Bitmoji</string>
    <string name="bitmoji_failure_notification_body">Tap to add Bitmoji again</string>
    <string name="bitmoji_failure_notification_title">Bitmoji Error</string>
    <string name="bitmoji_fallback_message">%s sent you a special message. Update the app to view the message.</string>
    <string name="bitmoji_keyboard">Bitmoji Keyboard</string>
    <string name="bitmoji_later_button_text">Maybe Later</string>
    <string name="bitmoji_loading_indicator">Bitmoji image loading indicator</string>
    <string name="bitmoji_logo">Bitmoji logo</string>
    <string name="bitmoji_main_title">Bitmoji</string>
    <string name="bitmoji_secondary_title">Break the ice with Bitmojis and make\nyour conversations more fun!</string>
    <string name="bitmoji_success_notification_body">Send a Bitmoji to a match in chat</string>
    <string name="bitmoji_success_notification_title">Bitmoji Connected</string>
    <string name="bitmoji_title_line_1">Introducing</string>
    <string name="bitmoji_tooltip_text_no_match_name">New! Send a Bitmoji</string>
    <string name="bitmoji_tooltip_text_with_match_name">New! Send a Bitmoji to %s</string>
    <string name="blend">Blend</string>
    <string name="blend_default">Default</string>
    <string name="block">Unmatch</string>
    <string name="blocked">Unmatched!</string>
    <string name="boost_again">boost again</string>
    <string name="boost_description">Be the top profile in your area for %d minutes to get more matches.</string>
    <string name="boost_feature_description_upsell">Give me %1$d free %2$s every%3$s %4$s</string>
    <string name="boost_feature_title">Tinder Boost</string>
    <string name="boost_get_matches_faster">Skip The Line</string>
    <string name="boost_intro_info_title_upsell">You get %1$d free %2$s every%3$s %4$s</string>
    <string name="boost_multiple">%1$sx</string>
    <string name="boost_multiplier_views">views</string>
    <string name="cancel">Cancel</string>
    <string name="chat_input_clear">Clear</string>
    <string name="chat_input_gif">Gif</string>
    <string name="chat_input_gif_close">Close Gifs</string>
    <string name="chat_input_hint">Type a message…</string>
    <string name="chat_input_hint_gif">Search for a GIF…</string>
    <string name="chat_input_reaction">Reaction</string>
    <string name="chat_input_send">Send</string>
    <string name="com_accountkit_button_resend_sms">Send SMS Again</string>
    <string name="com_accountkit_button_send_code_in_fb">Get a Code on Facebook</string>
    <string name="com_accountkit_code_sent_to">Verify your mobile number %1$s</string>
    <string name="com_accountkit_other_ways_to_get_code">Other ways to get code:</string>
    <string name="com_accountkit_resend_check">Check your SMS inbox</string>
    <string name="create_group_no_friends_ask_to_unlock">Add Friends</string>
    <string name="exit_survey_pause_confirm_body">Sometimes you need a break. Your matches and messages will be waiting when you come back. Choose when you’d like to reactivate your account.</string>
    <string name="friend_footer_dont_see">Don’t see who you’re looking for?</string>
    <string name="friend_footer_your_friends_on_tinder_social">Your friends on Tinder Social can invite you to go\nout. Go to settings to change these permissions.</string>
    <string name="intro_modal_bottom_left_image_description">Bottom left Bitmoji image</string>
    <string name="intro_modal_bottom_right_image_description">Bottom right Bitmoji image</string>
    <string name="intro_modal_center_image_description">Center Bitmoji image</string>
    <string name="intro_modal_top_left_image_description">Top left Bitmoji image</string>
    <string name="intro_modal_top_right_image_description">Top right Bitmoji image</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="not_now">Not Now</string>
    <string name="pause_my_account">Pause My Account</string>
    <string name="post_group_expire_text">Your group and group matches\n have just expired.</string>
    <string name="recommend_to_a_friend">Recommend to a Friend</string>
    <string name="report">Report</string>
    <string name="social_enabled_modal_description">Invite friends to go out and connect with other groups also going out.</string>
    <string name="social_enabled_modal_no_button_text">Not Now</string>
    <string name="social_enabled_modal_title">Are you going out tonight?</string>
    <string name="social_enabled_modal_yes_button_text">I’m Going Out</string>
    <string name="social_opt_in_enable_tinder_social">Enable Tinder Social</string>
    <string name="social_opt_in_learn_more">Learn More</string>
    <string name="social_opt_in_text">Start a group with your friends to match with\nother groups of friends on Tinder Social</string>
    <string name="unmute_notifications">Unmute Notifications</string>
    <string name="until_manual">Until I turn it back on</string>
    <string name="until_next_month">Until Next Month</string>
    <string name="until_next_week">Until Next Week</string>
    <string name="until_tomorrow">Until Tomorrow</string>
    <string name="user_menu_group_expired_button">Create Your Group</string>
    <string name="you_are_no_longer_out">You’re no longer out.</string>
</resources>