<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" style="@style/SocialModalContainer">
    <com.tinder.views.CustomTextView android:id="@c6248a/group_expired_modal_title" android:text="@string/you_are_no_longer_out" style="@style/social_modal_content_title_text"/>
    <com.tinder.views.CustomTextView android:id="@c6248a/group_expired_dialog_title" android:text="@string/post_group_expire_text" style="@style/social_modal_content_description_text"/>
    <com.tinder.views.CustomTextView android:id="@c6248a/group_expired_start_new_group" android:text="@string/user_menu_group_expired_button" style="@style/social_modal_main_rounded_button"/>
    <com.tinder.views.CustomTextView android:id="@c6248a/group_expired_no" android:layout_marginTop="24dp" android:text="@string/not_now" style="@style/social_modal_no_button"/>
</LinearLayout>
