<?xml version="1.0" encoding="utf-8"?>
<com.facebook.accountkit.ui.ConstrainedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" style="@c15385e/AccountKit_Container">
    <TextView android:id="@+id/com_accountkit_accountkit_verify_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_code_sent_to" android:drawableLeft="@c15381a/com_accountkit_device" android:drawablePadding="24dp" android:drawableStart="@c15381a/com_accountkit_device" style="@c15385e/AccountKit_Text"/>
    <Space android:layout_width="match_parent" android:layout_height="@c1191d/com_accountkit_space_medium"/>
    <TextView android:id="@+id/com_accountkit_accountkit_check_sms_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_resend_check" android:drawableLeft="@c15381a/com_accountkit_check_sms" android:drawablePadding="16dp" android:drawableStart="@c15381a/com_accountkit_check_sms" style="@c15385e/AccountKit_Text"/>
    <Space android:layout_width="match_parent" android:layout_height="@c1191d/com_accountkit_space_medium"/>
    <Button android:id="@+id/com_accountkit_resend_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/com_accountkit_button_resend_sms" style="@c15385e/AccountKit_Button"/>
    <TextView android:id="@+id/com_accountkit_other_ways_textview" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@c1191d/com_accountkit_space_large" android:layout_marginBottom="@c1191d/com_accountkit_space_medium" android:text="@string/com_accountkit_other_ways_to_get_code" style="@c15385e/AccountKit_TitleText"/>
    <Button android:textSize="16sp" android:gravity="start" android:id="@+id/com_accountkit_send_in_fb_button" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@c1191d/com_accountkit_space_medium" android:text="@string/com_accountkit_button_send_code_in_fb" android:drawableLeft="@c15381a/com_accountkit_code_fb" android:drawablePadding="15dp" android:drawableStart="@c15381a/com_accountkit_code_fb" style="@c15385e/AccountKit_Button"/>
    <Button android:textSize="16sp" android:gravity="start" android:id="@+id/com_accountkit_send_in_phone_call" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@c1191d/com_accountkit_space_medium" android:layout_marginBottom="@c1191d/com_accountkit_space_medium" android:drawableLeft="@c15381a/com_accountkit_get_call" android:drawablePadding="15dp" android:drawableStart="@c15381a/com_accountkit_get_call" style="@c15385e/AccountKit_Button"/>
</com.facebook.accountkit.ui.ConstrainedLinearLayout>
