<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xxsmall" android:layout_marginTop="16dp" android:layout_marginRight="@dimen/margin_xxsmall" android:layout_marginBottom="16dp" android:layout_marginStart="@dimen/margin_xxsmall" android:layout_marginEnd="@dimen/margin_xxsmall">
    <com.tinder.views.CustomTextView android:textSize="16sp" android:textColor="#555759" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friend_footer_dont_see"/>
    <com.tinder.views.CustomTextView android:layout_gravity="center" android:id="@c6248a/friend_foooter_button" android:layout_marginTop="12dp" android:layout_marginBottom="16dp" android:text="@string/create_group_no_friends_ask_to_unlock" style="@style/Tindered.Social.StrokeButton"/>
    <com.tinder.views.CustomTextView android:textSize="12dp" android:textColor="#c2c6cc" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friend_footer_your_friends_on_tinder_social"/>
</LinearLayout>
