<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:clipChildren="false" android:clipToPadding="false">
    <View android:background="@color/grey_medium_1" android:layout_width="match_parent" android:layout_height="1dp" app:layout_constraintBottom_toBottomOf="0"/>
    <ImageView android:id="@+id/intro_modal_bottom_left_image" android:visibility="gone" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginTop="5dp" android:contentDescription="@string/intro_modal_bottom_left_image_description" android:transformPivotX="80dp" android:transformPivotY="50dp" android:layout_marginStart="25dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/intro_modal_center_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/intro_modal_top_left_image"/>
    <ImageView android:id="@+id/intro_modal_top_left_image" android:visibility="gone" android:layout_width="73dp" android:layout_height="75dp" android:layout_marginTop="10dp" android:contentDescription="@string/intro_modal_top_left_image_description" android:transformPivotX="70dp" android:transformPivotY="75dp" android:layout_marginStart="70dp" app:layout_constraintBottom_toTopOf="@+id/intro_modal_bottom_left_image" app:layout_constraintEnd_toStartOf="@+id/intro_modal_center_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/intro_modal_top_right_image" android:visibility="gone" android:layout_width="85dp" android:layout_height="67dp" android:layout_marginTop="15dp" android:contentDescription="@string/intro_modal_top_right_image_description" android:transformPivotX="0dp" android:transformPivotY="75dp" android:layout_marginEnd="25dp" app:layout_constraintBottom_toTopOf="@+id/intro_modal_bottom_right_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/intro_modal_center_image" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/intro_modal_bottom_right_image" android:visibility="gone" android:layout_width="75dp" android:layout_height="80dp" android:layout_marginTop="10dp" android:contentDescription="@string/intro_modal_bottom_right_image_description" android:transformPivotX="0dp" android:transformPivotY="40dp" android:layout_marginEnd="5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/intro_modal_center_image" app:layout_constraintTop_toBottomOf="@+id/intro_modal_top_right_image"/>
    <ImageView android:layout_gravity="bottom" android:id="@+id/intro_modal_center_image" android:layout_width="154dp" android:layout_height="140dp" android:contentDescription="@string/intro_modal_center_image_description" android:alpha="1" android:layout_marginEnd="15dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
</merge>
