<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.tinder.chat.view.GifSelector android:id="@c6248a/gif_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/chat_input_gif_selector_height"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@c6248a/chat_controls" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBottom="@c6248a/chat_input_switcher" android:layout_marginStart="@dimen/space_xs">
        <com.tinder.bitmoji.view.BitmojiIconView android:layout_gravity="center_vertical" android:id="@c6248a/bitmoji_icon_view" android:layout_width="@dimen/chat_input_icon_size" android:layout_height="@dimen/chat_input_icon_size" android:layout_marginRight="@dimen/space_xs" android:layout_marginEnd="@dimen/space_xs"/>
        <com.tinder.reactions.chat.view.ChatInputExpandButtonView android:id="@c6248a/chat_control_reaction" android:layout_width="@dimen/chat_input_control_size" android:layout_height="@dimen/chat_input_control_size" android:layout_marginRight="@dimen/space_xs" android:src="@drawable/ic_chat_reaction" android:contentDescription="@string/chat_input_reaction" android:layout_marginEnd="@dimen/space_xs"/>
        <ImageSwitcher android:id="@c6248a/chat_control_gif_switcher" android:layout_width="@dimen/chat_input_control_size" android:layout_height="@dimen/chat_input_control_size" android:layout_marginRight="@dimen/space_xs" android:inAnimation="@anim/chat_gif_in" android:outAnimation="@anim/chat_gif_out" android:layout_marginEnd="@dimen/space_xs">
            <ImageView android:id="@c6248a/chat_control_gif" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ic_chat_gif" android:contentDescription="@string/chat_input_gif"/>
            <ImageView android:id="@c6248a/chat_control_gif_close" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ic_chat_gif_close" android:contentDescription="@string/chat_input_gif_close"/>
        </ImageSwitcher>
    </LinearLayout>
    <ViewSwitcher android:id="@c6248a/chat_input_switcher" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_xs" android:measureAllChildren="false" android:inAnimation="@anim/anim_quick_fade_in" android:outAnimation="@anim/anim_quick_fade_out" android:layout_toRightOf="@c6248a/chat_controls" android:layout_below="@c6248a/gif_selector" android:layout_alignWithParentIfMissing="true" android:layout_marginEnd="@dimen/space_xs" android:layout_toEndOf="@c6248a/chat_controls">
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:background="@drawable/chat_input_background" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.tinder.reactions.drawer.view.ChatInputEditText android:id="@c6248a/chat_input_text" android:hint="@string/chat_input_hint" android:inputType="none|text|textCapSentences|textAutoComplete|textMultiLine" style="@style/ChatInputText"/>
            <com.tinder.chat.view.ChatInputSendButtonView android:id="@c6248a/chat_input_send" android:background="@android:color/transparent" android:layout_width="@dimen/chat_input_send_size" android:layout_height="@dimen/chat_input_send_size" android:src="@drawable/chat_input_send" android:contentDescription="@string/chat_input_send"/>
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:background="@drawable/chat_input_background_gif" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.tinder.reactions.drawer.view.ChatInputEditText android:id="@c6248a/chat_input_gif_search" android:hint="@string/chat_input_hint_gif" android:inputType="textAutoComplete" style="@style/ChatInputText"/>
            <ImageButton android:id="@c6248a/chat_input_clear" android:background="@android:color/transparent" android:layout_width="@dimen/chat_input_clear_size" android:layout_height="@dimen/chat_input_clear_size" android:src="@drawable/ic_going_out_clear_location" android:contentDescription="@string/chat_input_clear"/>
        </LinearLayout>
    </ViewSwitcher>
    <com.tinder.bitmoji.view.BitmojiPickerView android:layout_gravity="bottom" android:id="@c6248a/bitmoji_picker_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/bitmoji_picker_height" android:layout_below="@c6248a/chat_input_switcher"/>
</merge>
