<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="@dimen/paywall_dialog_width" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/exit_survey_dialog_corner_radius" app:cardPreventCornerOverlap="false">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <com.tinder.views.CustomTextView android:textSize="@dimen/text_m" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@c6248a/confirmTitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/space_l" android:layout_marginTop="@dimen/space_s" android:layout_marginRight="@dimen/space_l" android:text="@string/pause_my_account" app:customFontStyle="3" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <com.tinder.views.CustomTextView android:textSize="@dimen/text_s" android:textColor="@color/boost_description_text_color" android:gravity="center_horizontal" android:id="@c6248a/confirmBody" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/space_s" android:layout_marginTop="@dimen/space_xs" android:layout_marginRight="@dimen/space_s" android:text="@string/exit_survey_pause_confirm_body" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/confirmTitle"/>
        <View android:id="@c6248a/border1" android:background="@color/boost_light_gray" android:layout_width="0dp" android:layout_height="1dp" android:layout_marginTop="@dimen/space_s" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/confirmBody"/>
        <com.tinder.views.CustomTextView android:id="@c6248a/tomorrowButton" android:layout_width="0dp" android:text="@string/until_tomorrow" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/border1" style="@style/Tindered.ExitSurveyDialog.Button"/>
        <View android:id="@c6248a/border2" android:background="@color/boost_light_gray" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/tomorrowButton"/>
        <com.tinder.views.CustomTextView android:id="@c6248a/nextWeekButton" android:layout_width="0dp" android:text="@string/until_next_week" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/border2" style="@style/Tindered.ExitSurveyDialog.Button"/>
        <View android:id="@c6248a/border3" android:background="@color/boost_light_gray" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/nextWeekButton"/>
        <com.tinder.views.CustomTextView android:id="@c6248a/nextMonthButton" android:layout_width="0dp" android:text="@string/until_next_month" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/border3" style="@style/Tindered.ExitSurveyDialog.Button"/>
        <View android:id="@c6248a/border4" android:background="@color/boost_light_gray" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/nextMonthButton"/>
        <com.tinder.views.CustomTextView android:id="@c6248a/manualButton" android:layout_width="0dp" android:text="@string/until_manual" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/border4" style="@style/Tindered.ExitSurveyDialog.Button"/>
        <View android:id="@c6248a/border5" android:background="@color/boost_light_gray" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/manualButton"/>
        <com.tinder.views.CustomTextView android:id="@c6248a/cancelButton" android:layout_width="0dp" android:text="@string/cancel" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@c6248a/border5" style="@style/Tindered.ExitSurveyDialog.Button.Cancel"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
